--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   provider: ^6.0.5
   get_it: ^7.7.0
   intl: ^0.18.0
+  mockito: ^5.4.4
+  build_runner: ^2.4.8
 
 dev_dependencies:
   flutter_test:
