--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   mockito: ^5.4.4
   build_runner: ^2.4.8
   flutter_svg: ^2.0.7
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
