--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   build_runner: ^2.4.8
   flutter_svg: ^2.0.7
   dio: ^5.8.0+1
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
