--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_svg: ^2.0.7
   dio: ^5.8.0+1
   shared_preferences: ^2.2.3
+  pinput: ^5.0.1
 
 dev_dependencies:
   flutter_test:
