--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   dio: ^5.8.0+1
   shared_preferences: ^2.2.3
   pinput: ^5.0.1
+  another_flushbar: ^1.12.30
 
 dev_dependencies:
   flutter_test:
