--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   shared_preferences: ^2.2.3
   pinput: ^5.0.1
   another_flushbar: ^1.12.30
-
+  skeletons_forked: ^0.0.4
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
