--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   pinput: ^5.0.1
   another_flushbar: ^1.12.30
   skeletons_forked: ^0.0.4
+  pdf: ^3.11.3
+  share_plus: ^11.0.0
 
   flutter_localizations:
     sdk: flutter
