--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   skeletons_forked: ^0.0.4
   pdf: ^3.11.3
   share_plus: ^11.0.0
+  qr_flutter: ^4.1.0
+
 
   flutter_localizations:
     sdk: flutter
