--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   pdf: ^3.11.3
   share_plus: ^11.0.0
   qr_flutter: ^4.1.0
+  phosphor_flutter: ^2.0.0
 
 
   flutter_localizations:
