adicionado funçao de pagar com leitor de codigo de barras

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   share_plus: ^11.0.0
   qr_flutter: ^4.1.0
   phosphor_flutter: ^2.0.0
-
+  mobile_scanner: ^5.2.3
 
   flutter_localizations:
     sdk: flutter
